# bincompress

./: .gitignore  Cargo.toml  README.md  simulate_testdata.ipynb
.github/workflows/: rust_coverage.yml
src/: base.rs  compress.rs  lib.rs  main.rs  restore.rs
