[package]
name = "bincompress"
version = "0.1.0"
authors = ["Paul Saary <saary@ebi.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.8", features = ["derive", "unstable-multicall"] }
bio = {version = "0.41", path = "/home/paul/software/rust-bio"}
flate2 = {version = "1.0"}
simple_logger = "2.1"
csv = "1.1"
log = "0.4"
serde = "1"
serde_json = "1"
camino = "1.0"
