[package]
name = "bincompress"
version = "0.2.0"
authors = ["Paul Saary <saary@ebi.ac.uk>"]
edition = "2018"

[dependencies]
clap = { version = "3.1.8", features = ["derive", "unstable-multicall"] }
bio = {version = "0.41", git = "https://github.com/openpaul/rust-bio", branch = "write_width"}
flate2 = {version = "1.0"}
simple_logger = "2.1"
csv = "1.1"
log = "0.4"
serde = "1"
serde_json = "1"
camino = "1.0"
sha2 = "0.10"
rayon= "1.5"

[dev-dependencies]
tempdir= "0.3.7"
